@@ -1,3 +1,10 @@
+2012-11-12 Roman
+- Archive: To value archive service request <name path="/%2fserv%2fval"/> is added for name get.
+- FIX:Archive.FSArch: Real end position obtain is some fixed for posible double archive's files creation.
+- UI.Vision: Print configuration store separated for page, diagram and document.
+    Trends names request and display its instead address for diagram print.
+
+
 2012-11-10 Roman
 - !!!!:Archive: TValBuf::get() and TValBuf::set() generic functions is added.
     Value archive's properties "Buffer period" and "Buffer size" and archivator's "Value period (sec)" and "Archivation period"
